# xornet-reporter

./: .gitignore  Cargo.toml  README.md  build.rs  config.json  install.ps1  install.sh  nodemon.json
.cargo/: config
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  cross.yml  pr.yml
archive/: package-lock.json  package.json
archive/lang/: ben-BD.json  pt-PT.json
archive/util/: getStats.js  isSpeedtestInstalled.js
experimental/: data_collector.bash
lang/: ar-IQ.json  fr-FR.json  it-IT.json  pt-BR.json  ru-RU.json  vi-VN.json  zh-TW.json
reporter/: bundle.js  config.json  index.js  package-lock.json  package.json
reporter/install-linux/: install.sh  xornet.service
reporter/install-windows/: XReporterSW.xml  install.bat  install.ps1
reporter/lang/: ben-BD.json  el-GR.json  en-GB.json  en-US.json  es-CL.json  es-ES.json  fil-PH.json  fr-FR.json  hi-IN.json  ja-JP.json  pt-BR.json  pt-PT.json  ru-RU.json  sv-SE.json  th-TH.json  vi-VN.json  zh-TW.json
reporter/localizations/: en-US.json  ja-JP.json
reporter/test/: functions.test.js
reporter/util/: PTYService.js  auri.js  checkAccount.js  checkForUpdates.js  clearLastLine.js  connectToXornet.js  download.js  downloadLanguage.js  getCpuUsage.js  getLocation.js  getStaticData.js  getStats.js  getSystemExtension.js  installSpeedtest.js  isSpeedtestInstalled.js  logger.js  printLogo.js  queue.js  restart.js  settings.js  shutdown.js  speedtest.js  translationTable.js
scripts/: install.ps1  install.sh  update-mipsel.sh  xornet-reporter.json
src/: arg_parser.rs  auth_manager.rs  config_manager.rs  data_collector.rs  info_box.rs  main.rs  reporter.rs  ui.rs  util.rs  websocket_manager.rs
src/data_collector/: cpu.rs  disks.rs  docker.rs  geolocation.rs  gpu.rs  mod.rs  nics.rs  ram.rs  temps.rs  uptimes.rs
src/types/: mod.rs
util/: logger.js  speedtest.js
