[package]
name = "xornet-reporter"
version = "0.11.0"
edition = "2018"

# Optimize for size
[profile.release]
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[scripts]
run = "cargo watch -x run"

[dependencies]
# Information
serde_json = "1.0.72"
serde = { features = ["derive"], version = "1.0.130" }
sysinfo = "0.22.4"
battery = "0.7.8"
nvml-wrapper = "0.7.0"
parking_lot = "0.11.2"
anyhow = "1.0.51"
thiserror = "1.0.30"
websocket = "0.26.2"
tokio = { version = "1.15.0", features = ["full"] }
reqwest = { version = "0.11.7", features = ["json"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
native-tls = "0.2.8"

# User interface
colored = "2.0.0"
crossterm = "0.22.1"
ctrlc = "3.2.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(unix)'.build-dependencies]
openssl = { version = "0.10.38", features = ["vendored"] }
