[package]
name = "xornet-reporter"
version = "0.17.0"
edition = "2018"

# Optimize for size
[profile.release]
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[scripts]
run = "cargo watch -x run"

[dependencies]
# Information
serde_json = "1.0.72"
serde = { features = ["derive"], version = "1.0.130" }
sysinfo = "0.22.4"
nvml-wrapper = "0.7.0"
parking_lot = "0.11.2"
anyhow = "1.0.51"
thiserror = "1.0.30"
tokio-tungstenite = {version = "0.17.1", features = ["rustls-tls-native-roots"]}
reqwest = { version = "0.11.7", default-features = false, features = ["blocking", "json", "rustls-tls"]  }
tokio = { version = "1.15.0", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
futures-util = "0.3.21"

# User interface
colored = "2.0.0"
